//羁绊信息
message LinkPB{
	required int32 link_no = 1;  // 羁绊编号
	optional bool is_activation = 2;  // 是否激活
}

message RuntType{
    required int32 runt_type = 1;
    repeated Runt runt = 2;
}

message Runt{
    required bytes runt_no = 1;
    repeated RuntAttr1 main_attr = 2;
    repeated RuntAttr1 minor_attr = 3;
    required int32 runt_id = 4;
    required int32 runt_po = 5;
}


//武将信息
message HeroPB
{
    required int32 hero_no = 1;
    optional int32 level = 2;
    optional int32 exp = 3;
    optional int32 break_level = 4;
    optional int32 refine = 5;
    optional bool is_guard = 6;
    repeated LinkPB links = 7;
    repeated RuntType runt_type = 8;
    optional bool is_online = 9;
    optional int32 awake_level = 10; //觉醒等级
    optional int32 awake_exp = 11; //觉醒经验
    optional int32 awake_item_num = 12; //觉醒丹数量
    optional int32 break_item_num = 13; //突破丹数量
}

message RuntAttr1{
    required int32 attr_value_type = 1;
    required float attr_value = 2;
    required int32 attr_increment = 3;
    required int32 attr_type = 4;
}
